updated phase classes and relative tests, added exceptions